# incentive-program-ai-scraper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: PIPELINE.md  SOURCE_SELECTION.md
output/Extracted_Tampa_Incentives/: extracted_live_only.csv  extracted_tampa_incentives.csv  new_extracted_tampa_incentives.csv
output/logs/: review_queue.csv  run_20260504T022344.jsonl  run_20260504T023335.jsonl  run_20260504T023944.jsonl  run_20260504T024323.jsonl  run_20260504T024433.jsonl
resources/: Dreamline_AI_Brief_Incentives_Process-converted.md  Incentive Data Extraction Info-converted.md
scripts/: quality_gate.py  validate_sources.py
src/dreamline_scraper/: __init__.py  cli.py  config.py  normalizer.py  schema.py  sources.py  url_utils.py
src/dreamline_scraper/extractors/: __init__.py  fetch.py  html.py  http.py  pdf.py  playwright_runner.py
src/dreamline_scraper/parsers/: __init__.py  llm_parser.py  prompts.py
src/dreamline_scraper/pipeline/: __init__.py  dedupe.py  orchestrator.py  writer.py
src/dreamline_scraper/scrapers/: __init__.py  _curated.py  _curated_expanded.py  base.py  dsire_florida.py  duke_fl.py  federal_extras.py  fema_mitigation.py  fhfc.py  florida_statutes.py  hillsborough.py  irs_25c_25d.py  msfh.py  pace_florida.py  registry.py  rewiring_america.py  tampa.py  tampa_bay_msa.py  teco.py
tests/: conftest.py  test_dedupe.py  test_dsire_parser.py  test_llm_parser.py  test_normalizer.py  test_pipeline.py  test_schema.py  test_scrapers.py  test_url_utils.py  test_validators.py  test_writer.py
(+3 files in other folders)
