[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamline-scraper"
version = "0.1.0"
description = "Tampa / Hillsborough incentives data extractor for Dreamline AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45.0"]
dev = ["pytest>=8.2.0", "pytest-mock>=3.14.0"]

[project.scripts]
dreamline-scraper = "dreamline_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
